# multi-shape-vectorizer

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TASKS.md  pyproject.toml
configs/: default.json
scripts/: benchmark.py  benchmark_gpu.py  benchmark_triton.py  plot_loss.py  profiler.py  run_optimize.py  visualize_templates.py
src/fh6_vectorizer/: __init__.py  cuda_renderer.py  json_writer.py  loss.py  manual_renderer.py  optimizer.py  pipeline.py  preprocess.py  ste_renderer.py  templates.py  triton_kernels.py  triton_kernels_v2.py
tests/: test_core.py  test_extra.py  test_new_features.py
