[project]
name = "fh6-vectorizer"
version = "0.1.0"
description = "FH6 Multi-Shape Differentiable Vectorizer — PoC"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "triton>=2.1; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
